--- a/index.ipynb
+++ b/index.ipynb
@@ -440,11 +440,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca_marker = None"
+    "la_boca_marker = marker_six"
    ]
   },
   {
