automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -539,7 +539,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "recoleta_marker = None"
+    "recoleta_marker = neighborhood_markers[]"
    ]
   },
   {
