automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -562,7 +562,7 @@
     }
    ],
    "source": [
-    "recoleta_marker.add_to(buenos_map)\n",
+    "neighborhood_markers.add_to(buenos_map)\n",
     "buenos_map"
    ]
   },
