--- a/index.ipynb
+++ b/index.ipynb
@@ -560,7 +560,7 @@
     }
    ],
    "source": [
-    "neighborhood_markers.add_to(buenos_map)\n",
+    "recoleta_marker.add_to(buenos_map)\n",
     "buenos_map"
    ]
   },
